--- a/khyeras/styles/khyeras_v1/template/partials/content_map.html
+++ b/khyeras/styles/khyeras_v1/template/partials/content_map.html
@@ -4,16 +4,19 @@
 			<a data-tabname="map-places-panel">Places</a>
 		</li>
 		<li class="tab">
-			<a data-tabname="map-perimeters-panel">Perimeters</a>
-		</li>
-		<li class="tab">
-			<a data-tabname="map-borders-panel">Borders</a>
-		</li>
-		<li class="tab">
 			<a data-tabname="map-grid-large-panel">Large Grid</a>
 		</li>
 		<li class="tab">
 			<a data-tabname="map-grid-small-panel">Small Grid</a>
+		</li>
+		<li class="tab">
+			<a data-tabname="map-perimeters-panel">Perimeters</a>
+		</li>
+		<li class="tab">
+			<a data-tabname="map-layouts-panel">Layouts</a>
+		</li>
+		<li class="tab">
+			<a data-tabname="map-borders-panel">Borders</a>
 		</li>
 	</ul>
 </div>
