--- a/khyeras/_dev/styles/khyeras_v1/template/simple_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/simple_header.html
@@ -1,3 +1,4 @@
+{% import 'utilities/macros.html' as function %}
 <!DOCTYPE html>
 <html dir="{S_CONTENT_DIRECTION}" lang="{S_USER_LANG}">
 <head>
@@ -5,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{META}
-	<title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{PAGE_TITLE}</title>
+	<title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{{ function.create_title(PAGE_TITLE, KHY_LINKS[KHY_SCRIPT_NAME]) }}</title>
 
 	<!-- IF S_ALLOW_CDN -->
 	<script>
