--- a/khyeras/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/styles/khyeras_v1/template/utilities/macros.html
@@ -116,3 +116,7 @@
 		</div>
 	{% endif %}
 {% endmacro %}
+
+{% macro create_title(title, khy_data) %}{% spaceless %}
+	{% if khy_data.self %}{{ khy_data.name }}{% else %}{{ title }}{% endif %}
+{% endspaceless %}{% endmacro %}
