Fix faq format, add more quick links, fixed timeline structure

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_other-sections.scss
@@ -289,7 +289,7 @@ dl.faq {
 	strong {
 		display: block;
 		margin: 0 0 5px 0;
-	}	
+	}
 	img {
 		padding: 5px;
 		border: 1px solid $color-01;
@@ -787,8 +787,8 @@ dl.faq {
 	}
 }
 
-.timeline.timeline-alternating .timeline-row {
-	&:nth-child(even) {
+.timeline.timeline-alternating .timeline-section .timeline-row {
+	&:nth-child(odd) {
 		flex-direction: row-reverse;
 		.timeline-detail-header {
 			direction: rtl;
