--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
@@ -20,11 +20,14 @@
 		{% set bonus = 'No bonus.' %}
 	{% endif %}
 
+	{% set actual_level = ((i < (10)) ? '0' : '') ~ i %}
+
 	{% set cards_add = [{
-		title : 'Level ' ~ ((i < (10)) ? '0' : '') ~ i,
-		icon : icon,
+		title      : 'Level ' ~ actual_level,
+		level      : actual_level,
+		icon       : icon,
 		experience : experience ? experience : '&#48;',
-		bonus : bonus
+		bonus      : bonus
 	}] %}
 
 	{% set card = card | merge(cards_add) %}
@@ -33,7 +36,7 @@
 {% if KHY_USER_LEVEL %}
 	{% set completed_cards = [] %}
 	{% for i in range(1, KHY_USER_LEVEL) %}
-		{% set current_level = 'levels-level-' ~ ((i < (10)) ? '0' : '') ~ i %}
+		{% set current_level = 'level-' ~ ((i < (10)) ? '0' : '') ~ i %}
 		{% set completed_cards = completed_cards | merge([current_level]) %}
 	{% endfor %}
 {% endif %}
@@ -49,13 +52,18 @@
 	</section>
 {% endif %}
 
-{% set section_id = 'levels' %}
 <section class="page-content-section">
 	<div class="card-grid">
 		{% for detail in card %}
-			{% set card_id = section_id  ~ '-' ~ function.create_handle(detail.title) %}
-			{% set card_changed = (completed_cards && card_id in completed_cards) ? true : false %}
-			<div id="{{ card_id }}" class="card-block{% if card_changed %} card-changed card-opacity{% endif %}">
+			{% set card_id = '' %}
+			{% set card_quick = '' %}
+			{% if detail.level % 10 == 1 %}
+				{% set card_name = 'Levels ' ~ detail.level ~ ' to ' ~ (detail.level + 10 - 1) %}
+				{% set card_id = ' id="' ~ function.create_handle(card_name) ~ '"' %}
+				{% set card_quick = ' data-quick-name="' ~ card_name ~ '"' %}
+			{% endif %}
+			{% set card_changed = (completed_cards && (function.create_handle(detail.title)) in completed_cards) ? true : false %}
+			<div{{ card_id }} class="card-block{% if card_changed %} card-changed card-opacity{% endif %}"{{ card_quick }}>
 				<h5 class="card-title">{{ detail.title }}</h5>
 				<div class="icon-wrapper">
 					<i class="icon icon-round {{ detail.icon }}" aria-hidden="true"></i>
@@ -66,7 +74,7 @@
 							<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i> Level complete!
 						</span>
 					{% endif %}
-					<span class="card-description-wrapper">Requirements and details on {{ detail.title | replace({'Level': 'level'}) }} are listed below.</span>
+					<span class="card-description-wrapper">Requirements and details on {{ detail.level }} are listed below.</span>
 				</div>
 				<div class="card-clear"></div>
 				{% if detail.experience || detail.bonus %}
