Worked on toggle stuff

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_base.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_base.scss
@@ -164,6 +164,11 @@ a.anchor {
 	display: none;
 }
 
+// Override font-awesome sr-only styles
+.sr-only {
+	@include sr-only;
+}
+
 /* Remove List Style
 ============================================== */
 
